[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/weapons/AR.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/player/Hand.gd" type="Script" id=3]
[ext_resource path="res://scenes/hud/Crosshairs.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/hud/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/player/InteractionRay.gd" type="Script" id=6]
[ext_resource path="res://scenes/entities/weapons/SniperRifle.tscn" type="PackedScene" id=12]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 2.0

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.240095, 0.299395, 1.41844 )

[sub_resource type="Animation" id=3]
resource_name = "Headbob"
length = 0.3
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("..:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.163886, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.5, 0 ), Vector3( 0, 0.55, 0 ), Vector3( 0, 0.5, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -0.05492 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:transform")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.7, 0 ) ]
}

[node name="FPS" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.05492 )
far = 298.4

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.627, -0.774, -0.923156 )
script = ExtResource( 3 )
default_pos = Vector3( 0.627, -0.774, -1.12 )
ads_pos = Vector3( 0, -0.51, -1.1 )
sway_left = Vector3( 0, 0.1, 0 )
sway_right = Vector3( 0, -0.1, 0 )
camera_node_path = NodePath("..")
player_node_path = NodePath("../../..")

[node name="SniperRifle" parent="Head/Camera/Hand" instance=ExtResource( 12 )]
HandPath = NodePath("..")

[node name="AR" parent="Head/Camera/Hand" instance=ExtResource( 2 )]
visible = false
HandPath = NodePath("..")

[node name="WeaponBounds" type="Area" parent="Head/Camera/Hand"]

[node name="Bound" type="CollisionShape" parent="Head/Camera/Hand/WeaponBounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.314177, -0.932626 )
shape = SubResource( 8 )

[node name="Crosshairs" parent="Head/Camera" instance=ExtResource( 4 )]

[node name="Hud" parent="Head/Camera" instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera"]
anims/Headbob = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="InteractionRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
script = ExtResource( 6 )

[connection signal="body_entered" from="Head/Camera/Hand/WeaponBounds" to="Head/Camera/Hand" method="_on_WeaponBounds_body_entered"]
[connection signal="body_exited" from="Head/Camera/Hand/WeaponBounds" to="Head/Camera/Hand" method="_on_WeaponBounds_body_exited"]
